<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:elevation="15dp"
    app:cardCornerRadius="8dp">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="10dp">

        <TextView
            android:id="@+id/txtone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/sampleofvideotxt"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imgFront"
            android:layout_width="250dp"
            android:layout_height="180dp"
            android:layout_below="@+id/txtone"
            android:layout_marginTop="15dp"
            android:scaleType="fitXY"
            android:src="@drawable/samplevideo" />

        <TextView
            android:id="@+id/txttwo"
            android:text="@string/selfievideoguidetxt"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/imgFront"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txtthree"
            android:text="@string/selfievideoguideunderlinetxt"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/txttwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txtfour"
            android:text="@string/selfie_text_message"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/txtthree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/txtfive"
            android:text="@string/selfie_text_language"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/txtfour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnVideoOk"
            android:text="@string/oktxt"
            android:textColor="@color/white"
            android:layout_marginTop="8dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/txtfive"
            android:background="@color/red"
            android:layout_width="230dp"
            android:layout_height="30dp"/>

    </RelativeLayout>
</androidx.cardview.widget.CardView>