<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/popUpLayoutId"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="12dp"
        android:layout_margin="3dp"
        app:contentPadding="20dp"
        app:cardBackgroundColor="@color/lightWhite"
        android:elevation="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imgSusRegisterId"
                android:src="@drawable/main_logo"
                android:layout_marginTop="8dp"
                android:layout_width="100dp"
                android:layout_height="100dp"/>
            <TextView
                android:id="@+id/txtCongId"
                android:text="@string/congtxt"
                android:layout_marginTop="5dp"
                android:textColor="@color/grey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/txtId"
                android:text="@string/succregtxt"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/txtstartId"
                android:text="@string/startusingloantxt"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btnStartNowId"
                android:text="@string/startnowtxt"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:background="@drawable/capsul_blue_btn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>