<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:elevation="15dp"
    app:cardCornerRadius="8dp">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="10dp">

        <TextView
            android:id="@+id/txtone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/sampleofidtxt"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtinfront"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtone"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/infronttxt"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/imgFront"
            android:layout_width="250dp"
            android:layout_height="180dp"
            android:layout_below="@+id/txtinfront"
            android:layout_marginTop="5dp"
            android:scaleType="fitXY"
            android:src="@drawable/passport" />

        <TextView
            android:id="@+id/txtbackside"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgFront"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/backsitetxt"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="250dp"
            android:layout_height="180dp"
            android:layout_below="@+id/txtbackside"
            android:layout_marginTop="5dp"
            android:scaleType="fitXY"
            android:src="@drawable/passport" />
        <Button
            android:id="@+id/btnPhotoOk"
            android:text="@string/oktxt"
            android:textColor="@color/white"
            android:layout_marginTop="8dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/imgBack"
            android:background="@color/red"
            android:layout_width="230dp"
            android:layout_height="30dp"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>