<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:elevation="20dp"
            app:cardBackgroundColor="@color/lightWhite"
            app:cardCornerRadius="12dp"
            app:contentPadding="20dp">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/information_collect" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:visibility="gone"
                        android:id="@+id/checkOneId"
                        android:buttonTint="@color/blue"
                        android:layout_width="40dp"
                        android:layout_height="40dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="7sp"
                        android:text="@string/contact_policy" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:visibility="gone"
                        android:id="@+id/checkTwoId"
                        android:buttonTint="@color/blue"
                        android:layout_width="40dp"
                        android:layout_height="40dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="7sp"
                        android:text="@string/location_policy" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:visibility="gone"
                        android:id="@+id/checkThreeId"
                        android:buttonTint="@color/blue"
                        android:layout_width="40dp"
                        android:layout_height="40dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="7sp"
                        android:text="@string/photo_policy" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="10dp">

                    <Button
                        android:id="@+id/btnAllowId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/close"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/capsul_blue_btn"
                        android:text="@string/allowtxt"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/close"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="20dp"
                        android:text="@string/rejecttxt"
                        android:textColor="@color/red" />

                </RelativeLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>