<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LogInActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imgId"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/main_logo" />

            <TextView
                android:id="@+id/txtTitleMobileId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/mobilenumber"
                android:textColor="@color/blue"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/linearLayoutDropLoginId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="+"
                        android:textColor="@color/blue"
                        android:textSize="15sp"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/txtConCodeId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:gravity="center"
                        android:text="+60"
                        android:textColor="@color/blue"
                        android:textSize="15sp" />

                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginHorizontal="3dp"
                        android:background="@drawable/icn_drop_down"
                        android:backgroundTint="@color/blue" />
                </LinearLayout>

                <EditText
                    android:id="@+id/etMobileId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:backgroundTint="@color/blue"
                    android:inputType="number"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:textColor="@color/blue" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtTitleNircId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/nricnumber"
                android:textColor="@color/blue"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/etNircId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/blue"
                android:hint="@string/yournricnumber"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@color/blue"
                android:textColorHint="@color/blue"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txtSelectLanguageId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/selectlanguage"
                android:textColor="@color/blue"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnLogInId"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/capsul_blue_btn"
                android:text="@string/logintxt"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:text="@string/donhaveacctxt"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtRegisterId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/registernowtxt"
                android:textColor="@color/blue"
                android:textStyle="bold" />


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:text="new app"
            android:textColor="@color/black"
            android:visibility="gone" />
    </RelativeLayout>
</ScrollView>